Added static dropdowns
